# PhotoEditor

./: CMakeCache.txt  CMakeLists.txt  Comm.cpp  Comm.hpp  ImageOpers.cpp  ImageOpers.hpp  Makefile  README.md  cmake_install.cmake  main.cpp
utils/: StringUtils.hpp
